# kita

./: CHANGELOG.md  README.md
.gemini/antigravity/: kita.md
kita-core/: .gitignore  Cargo.toml  schema.surql
kita-core/src/: auth.rs  db.rs  main.rs  routes.rs
kita-web/: package-lock.json  package.json
kita-web/src/: store.ts
kita-web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
kita-web/src-tauri/binaries/: README.md
kita-web/src-tauri/src/: lib.rs
kita-web/src/app/: page.tsx
kita-web/src/app/lista/: page.tsx
kita-web/src/app/login/: page.tsx
kita-web/src/app/suki/: page.tsx
kita-web/src/components/: Onboarding.tsx
