[package]
name = "kita-core"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
jsonwebtoken = "9.3.0"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }

# Database
# kv-mem  = in-process memory engine (dev / testing)
# kv-rocksdb = persistent embedded storage (swap in for production)
surrealdb = { version = "2.0.4", features = ["kv-mem"] }
tower = "0.4.13"

# Auth & Security
bcrypt = "0.15"

# Config
dotenvy = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
